--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@clerk/backend": "^1.17.1",
+    "@clerk/nextjs": "^6.4.1",
+    "@clerk/themes": "^2.1.46",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
